--- a/ch08_update_class.ipynb
+++ b/ch08_update_class.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,7 +25,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# 8장 데이터 준비하기 : 조인, 병합, 변형"
    ]
