--- a/ch11_updated_class_5_9.ipynb
+++ b/ch11_updated_class_5_9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 484,
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -367,65 +367,15 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Colorado</th>\n",
-       "      <th>Texas</th>\n",
-       "      <th>New York</th>\n",
-       "      <th>Ohio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2000-01-05</th>\n",
-       "      <td>1.624345</td>\n",
-       "      <td>-0.611756</td>\n",
-       "      <td>-0.528172</td>\n",
-       "      <td>-1.072969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-19</th>\n",
-       "      <td>0.319039</td>\n",
-       "      <td>-0.249370</td>\n",
-       "      <td>1.462108</td>\n",
-       "      <td>-2.060141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-02-02</th>\n",
-       "      <td>-0.172428</td>\n",
-       "      <td>-0.877858</td>\n",
-       "      <td>0.042214</td>\n",
-       "      <td>0.582815</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            Colorado     Texas  New York      Ohio\n",
-       "2000-01-05  1.624345 -0.611756 -0.528172 -1.072969\n",
-       "2000-01-19  0.319039 -0.249370  1.462108 -2.060141\n",
-       "2000-02-02 -0.172428 -0.877858  0.042214  0.582815"
+       "Colorado    1.624345\n",
+       "Texas      -0.611756\n",
+       "New York   -0.528172\n",
+       "Ohio       -1.072969\n",
+       "Name: 2000-01-05 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +401,7 @@
     "long_df.loc[\"2000-01-05\"]\n",
     "\n",
     "# 2) 슬라이싱\n",
-    "long_df.iloc[0:5:2]"
+    "#long_df.iloc[0:5:2]"
    ]
   },
   {
